--- a/front/package.json
+++ b/front/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "antd": "^3.24.2",
     "next": "^9.1.1",
+    "next-redux-wrapper": "^4.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
