--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -1,4 +1,4 @@
-{
+{   "parser": "babel-eslint",
     "parserOptions":{
         "ecmaVersion": 2018,     
         "sourceType": "module",  
@@ -8,16 +8,19 @@
     },
     "env":{
         "browser": true,   
-        "node": true
-
+        "node": true,
+        "es6": true
     },
     "extends": [
-        "eslint:recommended",  
+        "airbnb",  
     "plugin:react/recommended"
     ],
     "plugins": [
         "import",      
         "react-hooks"
-    ]
+    ],
+    "rules": {
+        "no-underscore-dangle": "off"
+    }
 
 }
