--- a/back/package.json
+++ b/back/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon"
-   },
+    "dev": "nodemon"
+  },
   "author": "zeynut",
   "license": "ISC",
   "dependencies": {
@@ -20,13 +20,16 @@
     "hpp": "^0.2.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "mysql2": "^2.0.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.21.1"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "sequelize-cli": "^5.5.1"
   }
 }
