--- a/front/package.json
+++ b/front/package.json
@@ -5,19 +5,25 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "next build",
-    "start": "next start"
+    "build": "cross-env ANALYZE=true next build",
+    "prestart": "npm run build",
+    "start": "cross-env NODE_ENV=production next start"
   },
   "author": "zeynut",
   "license": "ISC",
   "dependencies": {
+    "@next/bundle-analyzer": "^9.1.3",
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "antd": "^3.24.2",
     "axios": "^0.19.0",
+    "compression-webpack-plugin": "^3.0.0",
     "cookie-parser": "^1.4.4",
+    "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "immer": "^5.0.0",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "next": "^9.1.1",
     "next-redux-saga": "^4.0.2",
@@ -29,7 +35,8 @@
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "webpack-ant-icon-loader": "^1.0.8"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
